# Internship-

./: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  MainWindow.h  README.md
